--- a/Drøbakk_Visit/package.json
+++ b/Drøbakk_Visit/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "trivia",
+	"name": "dr-bakk-visit",
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
@@ -21,9 +21,7 @@
 		"prettier-plugin-svelte": "^3.3.3",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"typescript": "^5.0.0",
 		"vite": "^6.2.6"
-	},
-	"dependencies": {
-		"typescript": "^5.8.3"
 	}
 }
